--- a/makerspace.css
+++ b/makerspace.css
@@ -55,6 +55,7 @@
 	}
 	
 	.warning {
+		font-weight:bold;
 		color:#990000;
 	}
 	
@@ -118,6 +119,9 @@
 		text-align:center;
 		margin:0 auto;
 		margin-top:16px;
+		padding:6px 4px;
+		background-color:rgba(0,0,0,0.6);
+		border-radius:4px;
 	}
 
 	.confirmDeletion a {
@@ -134,6 +138,10 @@
 		border-bottom: solid 1px #BBBBBB;
 		border-left: solid 1px #EEEEEE;
 		background-color:#DDDDDD;
+	}
+
+	.confirmQuestion .confirmDeletion {
+		margin-top:12px;
 	}
 	
 	.confirmDeletion a:hover {
