--- a/makerspace.css
+++ b/makerspace.css
@@ -74,7 +74,7 @@ label.spaced {
 	/*left: 50px;*/
 	border: none;
 	border-bottom: 0px solid red;
-	background-image:url('/resources/images/alpha-black-20.png');
+	background-image:url('/images/alpha-black-20.png');
 	height:2000px;
 	width: 100%;
 	margin: 0;
@@ -180,13 +180,13 @@ main .grayButton {
 	border-radius: 3px;
 	overflow:hidden;
 	white-space:nowrap;
-	background-image:url('/resources/images/alpha-80.png');
+	background-image:url('/images/alpha-80.png');
 	color:black;
 	flex:1;
 }
 
 .DayResourceLabel:hover {
-	background-image:url('/resources/images/alpha-60.png');
+	background-image:url('/images/alpha-60.png');
 	text-decoration:none;
 }	
 
@@ -317,7 +317,7 @@ main .grayButton {
 .noteIcon {
 	width:12px;
 	height:11px;
-	background-image:url('/Resources/images/stickynoteimage-23x22.png');
+	background-image:url('/images/stickynoteimage-23x22.png');
 	background-size:11px 11px;
 	background-repeat:no-repeat;
 	float:left;
